--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
     <title>JP FINANCE</title>
 </head>
 <body style="background-color: beige ;">
+    <style>
+        h1{
+            color: brown;
+            text-align: center;
+            font-size: 2vw;
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+            margin-top: 1.2%; 
+        }
+    </style>
     <div style="background-color: aquamarine;margin-top: -1.009%;">
-        <h1 style="color: brown;text-align: center;font: size 25px;;font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;margin-top: 1.2%;" >JP FINANCE</h1>
+        <h1>JP FINANCE</h1>
         <hr>
     </div>
 </body>
