--- a/index.html
+++ b/index.html
@@ -4,19 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JP FINANCE</title>
+    <link rel="icon" href="/img/JP.png">
 </head>
 <body style="background-color: beige ;">
     <style>
         h1{
             color: brown;
-            text-align: center;
-            font-size: 2vw;
+            /* text-align: left; */
+            margin-left: 1%;
+            font-size: 1.5vw;
             font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-            margin-top: 1.2%; 
+            margin-top: 0%; 
+        }
+        .logo{
+            margin-top: 2%;
+            margin-left: 2.5%;
+            width: 4%;
+        }
+        .jp{
+            margin-top: 0%;
+        }
+        .home{
+            margin-left: 65%;
+            margin-top: -1%;
+        }
+        h3{
+            color: aliceblue;
+            margin-left: 67.5%;
+            margin-top: 0%;
         }
     </style>
-    <div style="background-color: aquamarine;margin-top: -1.009%;">
-        <h1>JP FINANCE</h1>
+    <div style="background-color: black;margin-top: -1.5%;margin-left: -1%;margin-right: -1%;">
+       <img src="/img/JP.png" alt="JP FINANCE" class="logo"> 
+       <h1 class="JP">JP FINANCE</h1>
+       <a href=""><img src="img/home.jpg" style="width: 2%;" alt="home" class="home"></a>
         <hr>
     </div>
 </body>
