added more logo's

--- a/index.html
+++ b/index.html
@@ -26,18 +26,29 @@
         }
         .home{
             margin-left: 65%;
-            margin-top: -1%;
+            margin-top: -2%;
+            width: 2.5%;
         }
         h3{
             color: aliceblue;
             margin-left: 67.5%;
             margin-top: 0%;
         }
+        .info{
+            width: 2%;
+            margin-left: 69.5%;
+            margin-top: -100%;
+        }
+        .phone{
+            width: 2%;
+        }
     </style>
-    <div style="background-color: black;margin-top: -1.5%;margin-left: -1%;margin-right: -1%;">
+    <div style="background-color: black;margin-top: -1.5%;margin-left: -1%;margin-right: -0.4%;">
        <img src="/img/JP.png" alt="JP FINANCE" class="logo"> 
        <h1 class="JP">JP FINANCE</h1>
-       <a href=""><img src="img/home.jpg" style="width: 2%;" alt="home" class="home"></a>
+       <a href=""><img src="img/home.jpg" alt="home" class="home"></a>
+       <!-- <a href=""><img src="img/info.png" alt="about us" class="info"></a> -->
+       <a href=""><img src="img/phone.png" alt="phone" class="phone"></a>
         <hr>
     </div>
 </body>
