--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
 </head>
 <body style="background-color: beige ;">
 
-    <div style="background-color: black;margin-top: -1.5%;margin-left: -1%;margin-right: -0.4%;">
-       <img src="/img/JP.png" alt="JP FINANCE" class="logo"> 
-       <h1 class="JP">JP FINANCE</h1>
-       <a href=""><img src="img/home.jpg" alt="home" class="home"></a>
-       <!-- <a href=""><img src="img/info.png" alt="about us" class="info"></a> -->
-       <a href=""><img src="img/phone.png" alt="phone" class="phone"></a>
-        <hr>
+    <div class="divv" style="background-color: black;">
+        <div>    
+            <img src="/img/JP.png" alt="JP FINANCE" class="logo"> 
+            <h1 class="JP">JP FINANCE</h1>
+        </div>
+        <div class="logos">
+            <a href=""><img src="img/home.jpg" alt="home" class="home"></a>
+            <a href=""><img src="img/contact" alt="phone" class="phone"></a>
+            <a href=""><img src="img/info.png" alt="about" class="info"></a>
+        </div>
+        
     </div>
-    <!-- <img src="img/info.png" alt="" class="gold"> -->
+
 </body>
 </html>
