--- a/index.html
+++ b/index.html
@@ -6,21 +6,48 @@
     <title>JP FINANCE</title>
     <link rel="icon" href="/img/JP.png">
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body style="background-color: beige ;">
+<body>
+    <header>
+        <img class="logo" src="img/JP.png" alt="logo">
+        <ul class="menu" >
+            <li><a href="#">Home</a></li>
+            <li><a href="#section1" >About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </header>
+    <main>
+        <img class="banner" src="img/banner.jpg" alt="">
+        <br><br>
+        <br><br><br>
+        <!-- about us -->
+        <h1 class ="#section1">ABOUT US</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita deleniti sunt ipsam, id quos, cumque veniam accusamus architecto vitae a harum! Accusantium possimus natus eum voluptatibus provident alias amet mollitia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum voluptatibus cupiditate quidem est quasi necessitatibus! Dolore error dolorum eveniet molestias pariatur, ex labore. A impedit doloribus porro minima officia tempore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, obcaecati facere rem quod explicabo distinctio cum beatae nostrum quae odit excepturi, necessitatibus esse consequuntur aliquam. Quasi saepe soluta distinctio veritatis!Loremlor\\\ Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum molestias magnam praesentium aspernatur unde aliquam asperiores, nesciunt officiis corrupti quia maxime repudiandae fugit assumenda hic ducimus magni quam ex iusto!</p>
+        <br><br><br>
+        <!-- services -->
 
-    <div class="divv" style="background-color: black;">
-        <div>    
-            <img src="/img/JP.png" alt="JP FINANCE" class="logo"> 
-            <h1 class="JP">JP FINANCE</h1>
-        </div>
-        <div class="logos">
-            <a href=""><img src="img/home.jpg" alt="home" class="home"></a>
-            <a href=""><img src="img/contact" alt="phone" class="phone"></a>
-            <a href=""><img src="img/info.png" alt="about" class="info"></a>
-        </div>
-        
+        <h1>Apply for Gold loan</h1>
+        <br><br>
+        <div class="d-grid gap-2 col-1 mx-auto">
+        <button type="button" class="btn btn-success">Gold loan</button>
     </div>
+        <br><br><br>
+        
+        <!-- Contact -->
+        <h1 class="#contact">Contact Us</h1>
+        <br>
+        <p class="footi">Phone No. 1234567890</p>
+        <p class="footi"><a href="">Email</a></p>
+        <p class="footi">Address: abc road</p>
+    </main>
 
+    <footer>
+        <p class="foot">&copy; 2021 JP FINANCE</p>
+    </footer>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
