--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="img/banner.jpg" class="d-block w-100" alt="...">
+                <img src="img/banner1.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="img/banner.jpg" class="d-block w-100" alt="...">
+                <img src="img/banner2.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="img/banner.jpg" class="d-block w-100" alt="...">
+                <img src="img/banner3.png" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -44,22 +44,24 @@
             <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
-            </button>
+            </button> 
           </div>
         <!-- <img class="banner" src="img/banner.jpg" alt=""> -->
         <br><br>
         <!-- about us -->
         <h1 id ="section1">ABOUT US</h1>
-        <p>*India's No. 1 Most Trusted Financial Services Brand 2023 for 7th Year in a row by TRA's Brand Trust Report. With a resolute focus on providing customers with the best services, Muthoot Finance has managed to earn the trust of millions.</p>
+        <p>*India's No. 1 Most Trusted Financial Services Brand 2023 for 7th Year in a row by TRA's Brand Trust Report. With a resolute focus on providing customers with the best services, Muthoot Finance has being managed to earn the trust of millions. Lorem from now which animal object is created then what will be the output</p>
         <br><br><br>
         <!-- services -->
 
         <h1 id="section2">Apply for Gold loan</h1>
-        <br><br>
+        <br>
+        <p>here u can apply for loan with the lowest intreat rate in the market and low emi option which is aimed to help people grow their organization and get out of the rat race for that we belive everyone should be able to the access money and all hence thank you for wasting time.</p>
+        <br>
         <div class="d-grid gap-2 col-1 mx-auto">
         <button type="button" class="btn btn-success">Gold loan</button>
     </div>
-        <br><br><br>
+        <br><br>
         
         <!-- Contact -->
         <h1 id="contact">Contact Us</h1>
