--- a/index.html
+++ b/index.html
@@ -10,13 +10,30 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="img/JP.png" alt="logo">
-        <ul class="menu" >
-            <li><a href="#">Home</a></li>
-            <li><a href="#section1" >About</a></li>
-            <li><a href="#section2">Services</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+          <div class="container-fluid">
+            <img class="logo" src="img/JP.png" alt="logo">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#section1">About Us</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#section2">Services</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#contact">Contact</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
     </header>
     <main>
         <!-- bootstrap -->
@@ -50,7 +67,7 @@
         <br><br>
         <!-- about us -->
         <h1 id ="section1">ABOUT US</h1>
-        <p>*India's No. 1 Most Trusted Financial Services Brand 2023 for 7th Year in a row by TRA's Brand Trust Report. With a resolute focus on providing customers with the best services, Muthoot Finance has being managed to earn the trust of millions. Lorem from now which animal object is created then what will be the output</p>
+        <p>*India's No. 1 Most Trusted Financial Services Brand 2023 for 7th Year in a row by TRA's Brand Trust Report. With a resolute focus on providing customers with the best services, Muthoot Finance has being managed to earn the trust of millions. Lorem from now which animal object is created then what will be the output. It is to be noted that this is going on as there is nothing else to offer other than gold loan , so potato tomato doesnot matter. There is still more Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, sapiente. Aspernatur vitae sapiente optio veniam. Nihil alias non porro eveniet aliquam, repellendus obcaecati nemo numquam? Quibusdam assumenda cumque quae tempora!</p>
         <br><br><br>
         <!-- services -->
 
